// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex/> should renders correctly 1`] = `
<div>
  <div
    class="sc-AxirZ fCWBRA"
  >
    <div
      class="sc-AxjAm jyvdUg"
    />
  </div>
</div>
`;

exports[`<Flex/> should renders correctly 2`] = `
<div>
  <div
    class="sc-AxirZ inrSgT"
  />
</div>
`;

exports[`<Flex/> should renders gapless 1`] = `
<div>
  <div
    class="sc-AxirZ dnxJEI"
  />
</div>
`;
